<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App3Activity">

    <Button
        android:id="@+id/app3Btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="131dp"
        android:background="#D87CE8"
        android:text="@string/app3_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app3RiddletextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#070606"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app3Btn" />

    <EditText
        android:id="@+id/app3Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/app3_edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/app3ConfirmBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app3RiddletextView"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/app3ConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="58dp"
        android:background="#D87CE8"
        android:text="@string/app3_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/app3Answer"
        app:layout_constraintTop_toBottomOf="@+id/app3RiddletextView" />

</android.support.constraint.ConstraintLayout>